# advent-of-code-2023

./: Cargo.toml  README.md
.github/workflows/: readme-stars.yml
src/: day01.rs  day02.rs  day03.rs  day04.rs  lib.rs  main.rs
src/template/: mod.rs
src/template/commands/: scaffold.rs
