[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.2"
itertools = "0.10.5"
memoize = "0.3.3"
num = "0.4.0"
pathfinding = "4.0.0"
regex = "1.7.0"
scan_fmt = "0.2.6"
serde_json = "1.0.89"
take-until = "0.1.0"
